# C-Encryption-and-Obfuscation

./: .gitignore  CMakeLists.txt  README.md  SECURITY_INTEGRATION.md  SECURITY_SETUP.md  build.bat
auth_server/: README.md  app.py  db.py
cmake/: Polymorphic.cmake
include/: antidebug.h  auth.h  common.h  config.h  frame_grabber.h  gpu_preprocessor.h  gui.h  hwid.h  inference_engine.h  input_tracker.h  license_client.h  mouse_controller.h  obfuscate.h  priority_manager.h  stealth.h  target_predictor.h  target_selector.h
polymorphic/: junk_stub.cpp.in
scripts/: polymorphic_patch.py
src/: antidebug.cpp  auth.cpp  frame_grabber.cpp  gpu_preprocessor.cu  gui.cpp  hwid.cpp  inference_engine.cpp  input_tracker.cpp  license_client.cpp  main.cpp  mouse_controller.cpp  priority_manager.cpp  stealth.cpp  target_predictor.cpp  target_selector.cpp
